fixed horizontal scroll, still need to fix vertical issue

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -9,3 +9,24 @@ main {
 .main-container {
     display: block;
 }
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #000000 #f0f0f0;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 16px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #f0f0f0;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #000000;
+    border-radius: 9px;
+    border: 6px solid #f0f0f0;
+  }
