--- a/src/css/search_bar.css
+++ b/src/css/search_bar.css
@@ -16,8 +16,9 @@
     justify-content: center;
     width: 100%;
     align-items: center;
-    position: relative; /* Set the position to relative */
+    position: relative;
   }
+
 .live-results {
     background-color: white;
     box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.06);
@@ -25,7 +26,7 @@
     position: absolute; /* Set the position to absolute */
     top: 100%; /* Position it below the input */
     left: 0; /* Align it with the left edge of the container */
-    z-index: 1; /* Ensure it's on top */
+    z-index: 2; /* Ensure it's on top */
     max-height: 11rem;
     overflow-y: scroll;
   }
