--- a/src/css/team.css
+++ b/src/css/team.css
@@ -1,27 +1,29 @@
 .team-container {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100%;
+    align-items: start;
     gap: .25rem;
+    overflow-x: auto;
 }
 
 .team-container .team-image {
-    max-width: 100%;
-    
+    max-width: 252.8px;
 }
 
 .team-player {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20%;
     flex-direction: column;
+    z-index: 1;
 }
 
 .team-player h3 {
     width: 100%;
     display: flex;
     justify-content: center;
+}
+
+.team-title-container {
     
+
 }
